# leorover_gazebo_sim_docker

./: .gitignore  README.md  docker-compose.yaml  docker_build.sh  docker_run.sh  ros_entrypoint.sh  run.sh
docker/: Dockerfile  docker_build.sh  docker_run.sh  ros_entrypoint.sh
environment_models/: black_sky.dae  lunar_proto_landscape_v002.dae  lunar_proto_landscape_v002.stl
gazebo_leorover_model/: empty_world.sdf  leo.sdf  leorover.sdf  lunar_landscape_prototype.sdf  sky_box.sdf
gazebo_leorover_model/models/model_extensions/: camera_mount_fixed_angle_25_degrees_v2.dae  rp_lidar_mount.dae
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/leorover_description/share/leorover_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/leorover_description/share/leorover_description/launch/: realsense_camera_static_tf_publisher.launch.xml
ros2_ws/install/leorover_description/share/leorover_description/urdf/: leo.urdf.xacro  leo_sim.urdf.xacro  macros.xacro  rp_lidar_mount.xacro
ros2_ws/install/leorover_gazebo_bridge/share/leorover_gazebo_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/leorover_gazebo_bridge/share/leorover_gazebo_bridge/launch/: leorover_gazebo_sim.launch.py  ros2_control_demo.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/leorover_simulation/leorover_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros2_ws/src/leorover_simulation/leorover_gazebo/config/: rviz.rviz
ros2_ws/src/leorover_simulation/leorover_gazebo/launch/: leorover_gazebo_sim.launch.py  rviz2.launch.py  show_urdf.launch.py  state_publisher.launch.xml
ros2_ws/src/leorover_simulation/leorover_gazebo/robots/: leorover.sdf
ros2_ws/src/leorover_simulation/leorover_gazebo/robots/models/: WheelA.dae
ros2_ws/src/leorover_simulation/leorover_gazebo/robots/models/model_extensions/: D435_D455_Optitrack_Mount_v2.dae  makita_battery.dae  rp_lidar.dae
ros2_ws/src/leorover_simulation/leorover_gazebo/worlds/: lunar_landscape_prototype.sdf
ros2_ws/src/leorover_simulation/leorover_gazebo/worlds/meshes/: lunar_proto_landscape_v002_flattened.dae  lunar_proto_rock_1_v001.dae  lunar_proto_rock_2_v001.dae  lunar_proto_rock_3_v001.dae
(+51 files in other folders)
