<?xml version="1.0"?>
<package format="3">
  <name>leorover_gazebo</name>
  <version>0.0.1</version>
  <description>
    Gazebo package for Leo Rover
  </description>
  <maintainer email="dave.vandermeer@uni.lu">Dave van der Meer</maintainer>
  <author email="dave.vandermeer@uni.lu">Dave van der Meer</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
